Adds images to everypage's gallery, moves 'the problem' and 'tech stack' sections to the 'main content' section, adds main features to everypage's content

--- a/src/Assets/Styles/_projects.scss
+++ b/src/Assets/Styles/_projects.scss
@@ -1,15 +1,6 @@
 .projectPage {
 
-    h1 {
-        text-align: center;
-        margin: 3rem auto 2rem auto;
-    }
 
-    h2, h3 {
-        text-align: center;
-        margin: 2rem auto;
-        padding: 0;
-    }
 
     .projectHeaderWrapper {
         padding-top: 2rem;
@@ -21,6 +12,17 @@
         padding-bottom: 2rem;
         margin: auto;
         max-width: 1200px;
+
+        h1 {
+            text-align: center;
+            margin: 3rem auto 2rem auto;
+        }
+    
+        h2 {
+            text-align: center;
+            margin: 2rem auto;
+            padding: 0;
+        }
     }
 
     .links {
@@ -33,68 +35,81 @@
         padding: 2rem 0;
     }
 
-    .techStack {
-        padding: 3rem 0;
     
-        .techStackList {
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            max-width: 896px;
-            margin: auto;
-            gap: 1rem;
-    
-            @include sizeDesktop {
-                gap: 2rem;
-            }
-    
-            li {
-                width: 120px;
-                display: flex;
-                flex-flow: row wrap;
-                align-items: flex-end;
-                justify-content: center;
-                list-style-type: none;
-                gap: 0.5rem;
-                
-                
-                @include sizeDesktop {
-                    
-                }
-                
-                p {
-                    display: flex;
-                    justify-content: center;
-                    font-size: 3rem;
-                    
-                    img {
-                        border-radius: 0.5rem;
-                    }
-                }
-    
-                .name {
-                    font-size: 0.6rem;
-                    align-self: flex-end;
-                }
-            }
-        }
-        }
-
     .projectContent {
         margin: auto;
         max-width: 896px;
 
+        h2 {
+            margin: 4rem 0 2.5rem 0;
+            padding: 0;
+        }
+
+        h3 {
+            margin: 2.5rem 0 0 0;
+            // padding: 0 0 1.5rem 0;
+            text-align: center;
+        }
+
+        
+        .techStack {
+            .techStackList {
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: space-between;
+                max-width: 896px;
+                margin: auto;
+                gap: 1rem;
+        
+                @include sizeDesktop {
+                    gap: 2rem;
+                }
+        
+                li {
+                    width: 120px;
+                    display: flex;
+                    flex-flow: row wrap;
+                    align-items: flex-end;
+                    justify-content: center;
+                    list-style-type: none;
+                    gap: 0.5rem;
+                    
+                    
+                    @include sizeDesktop {
+                        
+                    }
+                    
+                    p {
+                        display: flex;
+                        justify-content: center;
+                        font-size: 3rem;
+                        
+                        img {
+                            border-radius: 0.5rem;
+                        }
+                    }
+        
+                    .name {
+                        font-size: 0.6rem;
+                        align-self: flex-end;
+                    }
+                }
+            }
+        }
+
         .projectTextImage {
-            margin: 2rem auto;
+            margin: 0 auto 5rem auto;
             max-width: 896px;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 1rem;
+            gap: 2.5rem;
+            justify-content: center;
+            align-items: center;
+            text-align: justify;
         }
 
-        .projectCustom {
-            max-width: 896px;
-            margin: auto;
+        .video {
+            margin: 3rem auto 2rem;
 
             * {
                 width: 100%;
@@ -102,7 +117,7 @@
         }
 
         p {
-            margin: 0 0 2rem 0;
+            margin: 0 0 1.5rem 0;
             max-width: 896px;
         }
 
