--- a/src/Assets/Styles/_projects.scss
+++ b/src/Assets/Styles/_projects.scss
@@ -1,6 +1,70 @@
 .projectPage {
 
+    .fullscreenGalleryWrapper {
+        position: fixed;
+        z-index: 1000;
+        width: 100%;
 
+        .fullscreenGallery {
+            background-color: rgba(0,0,0, 0.5);
+            height: 100vh;
+            object-fit: cover;
+            display: flex;
+            position: static;
+            top: 0 ;
+            left: 0;
+            flex-flow: column nowrap;
+            justify-content: center;
+            gap: 2rem;
+            align-items: center;
+
+            .imageBlock {
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: center;
+                gap: 1rem;
+                align-items: center;
+                max-height: 90vh;
+                
+                
+                // .imageScroll {
+                //     margin: auto;
+                //     width: 50%;
+                //     // display: flex;
+                //     // flex-flow: column nowrap;
+                //     // justify-content: start;
+                //     // align-items: center;
+                //     overflow-y: scroll;   
+                //     // max-width: 100%;
+
+                    img {
+                        // box-shadow: 0px 0px 20px 5px rgba(255,255,255,0.4);
+                        max-height: 80vh;
+                        // max-width: 40%;
+                        
+                    }
+                // }
+
+                // .imageScroll::-webkit-scrollbar {
+                //     display: none;
+                //   }
+
+                p {
+                    font-size: 1.25rem;
+                    background-color: white;
+                    padding: 0.5rem 1.5rem;
+                    border-radius: 5px;
+                }
+            }
+
+            .info {
+                background-color: lightgray;
+                padding: 0.25rem 0.5rem;
+                font-size: 0.75rem;
+                border-radius: 5px;
+            }
+        }
+    }
 
     .projectHeaderWrapper {
         padding-top: 2rem;
@@ -134,8 +198,6 @@
             grid-column: -1 / 1;
         }
         .projectGalleryGrid {
-    
-    
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             gap: 1rem;
@@ -146,6 +208,10 @@
             margin-bottom: 6rem;
     
             img {
+                width: 300px;
+                max-height: 300px;
+                object-position: 0% 0%;
+                object-fit: cover;
                 transition: scale 0.5s;
                 border-radius: 1rem;
                 transition: scale 0.5s, filter 0.5s;
@@ -156,6 +222,7 @@
                 scale: 1.01;
                 transition: scale 0.5s, filter 0.5s;
                 filter: brightness(1);
+                cursor: pointer;
             }
     
             * {
@@ -165,33 +232,5 @@
             }
         }
     }
-
-
-    .expandedGallery {
-        top: 0;
-        left: 0;
-        margin: auto;
-        padding-top: 4rem;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0,0,0,0.75);
-
-        img {
-            z-index: 10;
-            display: block;
-            padding: 2rem 5rem 0 5rem;
-            margin: auto;
-            max-height: 75vh;
-        }
-
-        .description {
-            color: white;
-            margin: 0.5rem auto;
-            width: fit-content;
-            padding: 1rem 2rem;
-            border-radius: 1rem;
-            background-color: rgba(0,0,0,0.9);
-        }
-    }
 }
+
