--- a/src/Assets/Styles/_projects.scss
+++ b/src/Assets/Styles/_projects.scss
@@ -104,7 +104,7 @@
         justify-content: center;
         align-items: center;
         gap: 2rem;
-        margin-top: 2.5rem;
+        margin: 2.5rem 0;
     }
 
     .projectContent {
@@ -112,18 +112,20 @@
         max-width: 896px;
 
         h2 {
-            margin: 4rem 0 2.5rem 0;
+            margin: 6rem 0 2.5rem 0;
             padding: 0;
         }
 
         h3 {
-            margin: 2.5rem 0 0 0;
-            // padding: 0 0 1.5rem 0;
-            text-align: center;
+            margin: 2rem 0;
+            text-align: left;
         }
 
         
         .techStack {
+            margin-top: 6rem;
+
+
             .techStackList {
                 display: flex;
                 flex-flow: row wrap;
@@ -201,7 +203,6 @@
 
     .projectGallery {
         h2 {
-            padding: 2rem 0 1rem 0;
             grid-column: -1 / 1;
         }
         .projectGalleryGrid {
