--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -3,6 +3,7 @@
     width: 100%;
     position: fixed;
     border-bottom: 1px solid rgba(50, 144, 199, 0.5);
+    z-index: 100;
 
     .navBar {
         display: flex;
