--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -17,6 +17,7 @@
             img {
                 display: block;
                 max-width: 100%;
+                object-fit: contain;
             }
             
             .titleContainer {
