--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -102,38 +102,20 @@
         }
 
         .contactSocial {
-            .headerMenu {
-                .icon {
-                    font-size: 1.2rem;
-
-                    @include sizeTablet {
-                        font-size: 1.5rem;
-                    }
-                }
-
-                ul {
-                    display: flex;
-                    flex-flow: row nowrap;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 2rem;
+            ul {
+                padding: 0;
+                margin: 0;
+                display: flex;
+                flex-flow: row nowrap;
+                gap: 1.5rem;
+    
+                li {
+                    list-style-type: none;
+                    margin: 0;
                     padding: 0;
-                    //margin: 1rem 0;
-
-                    li {
-                        list-style-type: none;
-                        //change place?
-                        font-size: 0.75rem;
-
-                        list-style: none;
-
-
-                        @include sizeTablet {
-                            font-size: 1rem;
-                        }
-                    }
                 }
             }
+            
         }
     }
 }   
