Adds _mixins.scss to styles folder, importing it globally and removes it from importing on each style file

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 $color-main-light: rgb(80, 4, 4);
 $color-main-dark: rgb(29, 78, 141);
 
