--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,13 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins&family=Ubuntu:wght@300;400;500;700&display=swap');
-@import '../components/mixins';
-
-
-
-
-
-// h1, h2, h3 {
-//     font-family: $font-serif;
-// }
+h1, h2, h3 {
+    font-family: $font-serif;
+}
 
 h1 {
     text-align: center;
