--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video{
     margin: 0;
     padding: 0;
@@ -80,7 +85,6 @@ a.disabledButtom {
 .hidden {
     display: none;
 }
-
 
 
 // :root {
