--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins&family=Ubuntu:wght@300;400;500;700&display=swap');
 
-$color-main-light: rgb(80, 4, 4);
-$color-main-dark: rgb(29, 78, 141);
+$color-main-light: white;
+$color-main-dark: black;
 
 $color-secondary-light: rgba(200,200,200,1);
 $color-secondary-dark: rgba(35,35,35,1);
