--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -32,4 +32,34 @@
             display: none;
         }
     }
+    
+    a, p {
+        color: $color-main-light;
+        transition: color 0.25s;
+    }
+    
+    a:hover {
+        color: rgb(152, 201, 230);
+    
+        p {
+            color: $color-accent;
+        }
+    }
+    
+    .icon {
+        font-size: 1rem;
+    
+        @include sizeTablet {
+            font-size: 1.2rem;
+        }
+    }
 }
+
+
+
+    .resumeDownload {
+        background-color: $color-accent;
+        border-radius: 6px;
+        padding: 0.25rem 0.6rem;
+        //border: 1px solid rgba($color-accent, 0.6);
+    }
