--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -18,17 +18,16 @@
     margin: auto;
     max-width: 896px;
 
-    .profilePicture {
-        // background-image: url(../Pictures/DSCF9483.jpg) ;
-        z-index: 10;
-        object-position: center;
-        background-position-x: 43%;
-        background-position-y: 40%;
-        background-size: 220%;
-        width: 250px;
-        height: 250px;
-        border-radius: 2rem;
-    }
+        .profilePicture {
+            z-index: 10;
+            object-position: center;
+            background-position-x: 43%;
+            background-position-y: 40%;
+            background-size: 220%;
+            width: 250px;
+            height: 250px;
+            border-radius: 2rem;
+        }
 
     .profileText {
         text-align: left;
@@ -65,6 +64,15 @@
                 display: flex;
                 flex-flow: row nowrap;
                 gap: 0.5rem;
+                align-items: center;
+
+                p {
+                    display: flex;
+                }
+            }
+
+            .smaller {
+                font-size: 0.7rem;
             }
         }
     }
