Improvements on the Hero, projects and skills sections style

--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -24,8 +24,8 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                // color: $color-main-light;
-                // background-color: $color-bg-dark-transparent;
+                color: $color-main-light;
+                background-color: $color-bg-dark-transparent;
                 padding: 1rem;
             }
         }
@@ -37,7 +37,7 @@
 
     .stack {
         padding-bottom: 1rem;
-        // color: $color-secondary-dark;
+        color: $color-secondary-dark;
         font-size: 0.9rem;
     }
     
