Fixes style of hero

--- a/src/components/Projects.module.scss
+++ b/src/components/Projects.module.scss
@@ -1,6 +1,6 @@
 .projectsWrapper {
     padding: 4rem 1rem;
-    // background-color: $color-bg-lighter;
+    background-color: $color-bg-lighter;
 
     .projects {
     
