--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 *, *:before, *:after{
     box-sizing: border-box;
 }
