--- a/src/components/Carrousel.module.scss
+++ b/src/components/Carrousel.module.scss
@@ -3,18 +3,50 @@
     justify-content: center;
     align-items: center;
     height: 70vh;
+    margin: 0 auto;
+    max-width: 968px;
     gap: 1rem;
+    margin-bottom: 5rem;
+    position: relative;
+
+    .previousImageArrow, .nextImageArrow {
+        font-size: 1.5rem;
+        color: rgba(255,255,255,0.7);
+        width: 3rem;
+        height: 3rem;
+        border-radius: 35%;
+        border: none;
+        cursor: pointer;
+        z-index: 10;
+        background-color: rgba(0,0,0,0.7);
+        transition: color 0.2s, background-color 0.5s;
+
+        * {
+            pointer-events: none;
+        }
+    }
     
-    button {
-        width: 2rem;
-        height: 2rem;
-        border-radius: 8px;
+    .previousImageArrow:hover, .nextImageArrow:hover {
+        color: rgb(255,255,255);
+        background-color: rgba(0,0,0,0.8);
+        transition: color 0.2s, background-color 0.5s;
     }
 
+    .previousImageArrow {
+        position: absolute;
+        left: 0px;
+        
+    }
+
+    .nextImageArrow {
+        position: absolute;
+        right: 0px;
+        
+    }
 
     img {
-        height: 100%;
-        width: 300px;
+        max-height: 100%;
+        max-width: 896px * 2 / 3;
     }
 
     .previousImage, .nextImage {
