--- a/src/components/SinglePageHero.module.scss
+++ b/src/components/SinglePageHero.module.scss
@@ -10,7 +10,7 @@
     overflow: hidden;
 
     @include sizeDesktop {
-        padding: 11rem 2% 7.5rem 2%;
+        padding: 8rem 2% 6rem 2%;
     }
 
     .ball1 {
@@ -71,12 +71,44 @@
 
     h1 {
         color: $color-main-light;
-        margin: 0 0 64px 0;
+        margin: 0 0 32px 0;
         padding: 0;
     }
 
     h2 {
         color: $color-secondary-light;
         font-size: 28px;
+    }
+
+    .techStack {
+        max-width: 696px;
+        margin: 0 auto;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;        
+        
+        .singleTech {
+            display: flex;
+            flex-flow: column;
+            margin: 0 0;
+            align-items: center;
+            justify-content: space-between;
+            gap: 0.5rem;
+            
+            p {
+                
+                font-size: 0.75rem;
+            }
+
+            img, svg {
+                flex-grow: 1;
+                max-width: 100px;
+                max-height: 50px;
+                height: 100%;
+                width: 100%
+            }
+        }
     }
 }
