--- a/src/components/SinglePageHero.module.scss
+++ b/src/components/SinglePageHero.module.scss
@@ -88,7 +88,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 1rem;        
-        
+        // position: relative;
 
     }
 }
