General styling upgrades on homepage and aligning to the left on text+image component

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -16,7 +16,7 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 h1, h2, h3 {
-    font-family: $font-serif;
+    font-family: $font-sans;
 }
 
 h1 {
