--- a/src/components/TextAndImage.module.scss
+++ b/src/components/TextAndImage.module.scss
@@ -12,7 +12,7 @@
         h3 {
             margin-top: 2rem;
             margin-bottom: 1rem;
-            text-align: center;
+            text-align: left;
         }
 
         p {
