--- a/src/app/projects/py-game/page.module.scss
+++ b/src/app/projects/py-game/page.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2rem 0;
+    margin: 0 0 3rem 0;
     padding: 0 1rem;
 
     .image {
