--- a/src/app/projects/task-list/page.module.scss
+++ b/src/app/projects/task-list/page.module.scss
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2rem 0;
-    padding: 0 1rem;
+    padding: 0 1rem 3rem 1rem;
 
     .image {
         box-shadow: 4px 4px 24px -5px rgba(0,0,0,0.4);
