--- a/src/components/Carrousel.module.scss
+++ b/src/components/Carrousel.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    max-height: 70vh;
     margin: 0 auto;
     max-width: 968px;
     gap: 1rem;
@@ -51,7 +51,7 @@
     }
 
     img {
-        max-height: 100%;
+        max-height: 70vh;
         padding: 0 1rem;
         max-width: 100%;
 
